# hanshirodb

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: API.md  DATA_MODEL.md  OPTIMIZATION_GUIDE.md  invite.ics
hanshiro-api/: Cargo.toml
hanshiro-api/src/: client.rs  embedder.rs  lib.rs  main.rs  remote.rs  server.rs
hanshiro-api/tests/: production_scenarios.rs
hanshiro-cli/: Cargo.toml
hanshiro-cli/src/: main.rs
hanshiro-core/: Cargo.toml
hanshiro-core/src/: config.rs  crypto.rs  error.rs  lib.rs  metrics.rs  serialization.rs  traits.rs  types.rs  utils.rs  value.rs
hanshiro-core/tests/: unit_tests.rs
hanshiro-index/: Cargo.toml
hanshiro-index/benches/: simd_bench.rs
hanshiro-index/src/: compaction.rs  flat.rs  hybrid.rs  lib.rs  simd.rs  traits.rs  vamana.rs
hanshiro-index/tests/: production_tests.rs  recall_test.rs  unit_tests.rs
hanshiro-ingest/: Cargo.toml
hanshiro-ingest/src/: lib.rs
hanshiro-storage/: Cargo.toml  README.md
hanshiro-storage/src/: cache.rs  cached_time.rs  compaction.rs  correlation.rs  engine.rs  fd.rs  lib.rs  manifest.rs  memtable.rs  partitioning.rs  sstable.rs  vector_store.rs  wal.rs  wal_optimized.rs
hanshiro-storage/src/memtable/: manager.rs  mod.rs  table.rs  types.rs
hanshiro-storage/src/sstable/: bloom.rs  builder.rs  compression.rs  iterator.rs  mod.rs  reader.rs  types.rs  writer.rs
hanshiro-storage/src/wal/: file.rs  iterator.rs  mod.rs  types.rs
hanshiro-storage/tests/: cache_tests.rs  correlation_tests.rs  crash_recovery_tests.rs  debug_wal.rs  integration_tests.rs  memtable_tests.rs  optimization_bench.rs  partitioning_tests.rs  performance_verification.rs  serialization_test.rs  simple_wal_test.rs  soak_test.rs  sstable_tests.rs  storage_peak_performance.rs  vector_store_tests.rs  wal_performance_test.rs  wal_tests.proptest-regressions  wal_tests.rs
