[package]
name = "hanshiro-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hanshiro-api"
path = "src/main.rs"

[dependencies]
hanshiro-core = { path = "../hanshiro-core" }
hanshiro-storage = { path = "../hanshiro-storage" }
hanshiro-index = { path = "../hanshiro-index" }
hanshiro-ingest = { path = "../hanshiro-ingest" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# API dependencies
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }