[package]
name = "hanshiro-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "hanshiro_api"
path = "src/lib.rs"

[[bin]]
name = "hanshiro-api"
path = "src/main.rs"

[dependencies]
hanshiro-core = { path = "../hanshiro-core" }
hanshiro-storage = { path = "../hanshiro-storage" }
hanshiro-index = { path = "../hanshiro-index" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"