[package]
name = "hanshiro-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hanshiro-cli"
path = "src/main.rs"

[dependencies]
hanshiro-core = { path = "../hanshiro-core" }
hanshiro-storage = { path = "../hanshiro-storage" }
hanshiro-index = { path = "../hanshiro-index" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# CLI dependencies
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }