[package]
name = "hanshiro-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hanshiro-core = { path = "../hanshiro-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Index dependencies
roaring = { workspace = true }
dashmap = { workspace = true }
parking_lot = "0.12"
byteorder = "1.5"
rand = "0.8"
rayon = "1.10"
uuid = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "simd_bench"
harness = false